# docs/openapi.yaml
@@ -18,6 +18,13 @@ paths:
       summary: List all tasks
       tags:
         - Tasks
+      parameters:
+        - in: query
+          name: completed
+          schema:
+            type: boolean
+          required: false
+          description: Filter tasks by completion status (true or false)
       responses:
         '200':
           description: OK
